--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.tomahawkd</groupId>
-	<artifactId>JLightConfig</artifactId>
+	<artifactId>jlightconfig</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
